<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/mio_varstrbrindarubicacion1"
            android:textColor="@color/blackPrimary"/>



        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/mio_bubtnaceptar"
                android:layout_width="@dimen/btn_type03_width"
                android:layout_height="match_parent"
                android:text="@string/mio_varstrbrindarubicacion2"
                android:layout_marginTop="9dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/containedbutton_orange"
                android:textColor="@color/blackPrimary"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/mio_bubtncancelar"
                android:layout_width="@dimen/btn_type03_width"
                android:layout_height="match_parent"
                android:text="@string/mio_varstrbrindarubicacion3"
                android:layout_marginTop="9dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/containedbutton_red"
                android:textColor="@color/blackPrimary"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>